# PearlEngine

./: .clang-format  .clangd  .gdbinit  .gitignore  .gitmodules  .luarc.json  .nvim.lua  :W  :w  :w:w  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RenderDocSettings.cap  TODO.md  build_run.sh  clean_build.sh  cmake_install.cmake  compile_build.sh  compile_build_run.sh  compile_commands.json  imgui.ini  project.dot  project_assets._medieval house.obj.json  project_assetsmedieval house.obj.json  project_assetsmeshTest.obj.json
.cache/clangd/index/: context.c.734AC5B9E1298EC2.idx  egl_context.c.00E2B9D6138608FD.idx  glad.c.A0682DBD42DBBB20.idx  glad.h.0694B75A13982113.idx  glfw3.h.1207C7B8E6F8BFB5.idx  glfw3native.h.E6DC02A60B48A3C0.idx  glx_context.c.215B2182CE4A5406.idx  init.c.3D0D1158CFC23E0F.idx  input.c.0913569B4D9B172A.idx  internal.h.DF3BD9F2E6312DD7.idx  khrplatform.h.B9D9F3FFCDDA9EF7.idx  linux_joystick.c.13DA30543D8BA997.idx  linux_joystick.h.5A292B3CF8C49325.idx  main.cpp.70B28480B0F97AEE.idx  mappings.h.82D0A24EBA5E1C24.idx  monitor.c.4BBD8C849E2E0B01.idx  null_init.c.C88D9C821E021964.idx  null_joystick.c.8BB80869F1952159.idx  null_joystick.h.180D7B10DCB9E1BF.idx  null_monitor.c.BEA1C41D1F744731.idx  null_platform.h.FA5CDB9BB1F7339D.idx  null_window.c.FD8657968C71D561.idx  osmesa_context.c.CDB1B8FE826EFFA8.idx  platform.c.726DA098137795A0.idx  platform.h.30A2BD03E4C35FD5.idx  posix_module.c.3D933E3244121D5D.idx  (+18 more)
assets/: Empty.json  Level1.json  Level2.json  Level3.json  MainMenu.json  PhysicsScene.json  Spherei.json  TerrainSave.json  TestSave1.json  TextTest.json  boxtest.json  hihi.json  scene.json  scene1.scene  script_scene.json  test_load.json
assets/scripts/: ButtonHover.lua  Camera.lua  ClickTest.lua  Enemy.lua  LoadScene2.lua  LoadScene3.lua  MainMenuController.lua  PauseMenuController.lua  Pillar1.lua  Pillar2.lua  PlankButton.lua  Player.lua  PlayerLastScene.lua  RainbowColorHover.lua  SetMainCameraOnCreate.lua  Win.lua  collision_test.lua  test.lua
docs/: sphere-terrain-collision.md
my/: levelTimes.json
project_assets/: ._medieval house.obj.json  medieval house.Mesh_Asset.json  medieval house.obj.json  meshTest.Mesh_Asset.json  pearl.Texture_Asset.json  sunshine.Texture_Asset.json
shaders/: displayFrag.glsl  displayVert.glsl  flatFrag.glsl  frag.glsl  fragNew.glsl  geometryFrag.glsl  geometryVert.glsl  gridFrag.glsl  gridVert.glsl  lightFrag.glsl  lightVert.glsl  lineFrag.glsl  lineVert.glsl  pickFrag.glsl  pickVert.glsl  terrainFrag.glsl  terrainVert.glsl  textFrag.glsl  textVert.glsl  vert.glsl  vertNew.glsl
src/: Camera.h  Cube.cpp  Cube.h  PearlEngine.cpp  PearlEngine.h  PearlWindow.cpp  PearlWindow.h  Shader.cpp  Shader.h  Square.cpp  Square.h  Time.cpp  Transform.h  Triangle.cpp  Triangle.h  main.cpp
src/asset/: Asset.h  AssetDescriptor.h  AssetSystem.cpp  AssetSystem.h  Assets.h  AssetsMacros.h  IAsset.h  IAssetConverter.h  IAssetSerializer.h  ISerializationReader.h  ISerializationWriter.h
src/components/: Transform.cpp
src/core/: EngineContext.cpp  EngineContext.h  GUIContext.cpp  GUIContext.h  ImGuiWrapperContext.cpp  ImGuiWrapperContext.h  Input.h  InputManager.cpp  InputManager.h  PearlEngine.cpp  PearlEngine.h  PearlWindow.cpp  PearlWindow.h  RuntimeState.h  Scene.cpp  Scene.h  ScriptEngine.cpp  ScriptEngine.h  SelectionWizard.h  Time.cpp  Time.h  TimeScore.h  message.md
src/ecs/: Component.h  ComponentFlags.h  GameObject.h  IComponentArray.h  ecs_common.h  ecs_componentArray.h  ecs_componentManager.h  ecs_coordinator.h  ecs_entityManager.h  ecs_system.h  ecs_systemManager.h  ecs_system_impl.h
src/editor/: ComponentEditor.h  ComponentEditorRegistry.h  EditorPanel.h  ImGuiHelpers.h  InspectorEditorPanel.cpp  LoggerEditorPanel.cpp  LoggerEditorPanel.h  MenuBar.cpp  MenuBar.h  MenuRegistry.h  PanelCommon.h  ResourceEditorPanel.cpp  ResourceEditorPanel.h  SceneHierarchyEditorPanel.cpp  SceneHierarchyEditorPanel.h  UserGUI.cpp  UserGUI.h  ViewportEditorPanel.cpp  ViewportEditorPanel.h
src/file/: FileSystem.cpp  FileSystem.h
src/geometry/: Cube.cpp  Cube.h  Geometry.cpp  Geometry.h  GetCube.h  Mesh.cpp  Mesh.h  Renderable.h  Triangle.cpp
src/message/: CreateMeshMessage.h  CreateMeshMessageHandler.h  IMessageHandler.h  Message.h  MessageBus.h  MessageData.h  MessageQueue.h
src/physics/: ContactPoint.h
src/project/: File.h  FileDescriptor.h  Project.cpp  Project.h
src/rendering/: AmbientLightData.h  Camera.cpp  Camera.h  CameraData.h  EngineCamera.cpp  EngineCamera.h  FrameBuffer.cpp  FrameBuffer.h  G-Buffer.h  GBuffer.cpp  GBuffer.h  LineRenderer.cpp  LineRenderer.h  Material.cpp  Material.h  PickingFramebuffer.cpp  PickingFramebuffer.h  PointLightData.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderData.cpp  ShaderData.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  ViewportGrid.cpp  ViewportGrid.h
src/resource/: DefaultResources.h  Defaults.cpp  Defaults.h  Handle.h  HandleAllocator.h  IResource.h  IResourceConverter.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshManager.cpp  MeshManager.h  ResourceCommon.h  ResourceMacros.h  ResourceManager.h  ResourceManagerBase.h  ResourceSystem.h  ResourceTraits.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h  TextureConfig.h  TextureLoader.cpp  TextureManager.cpp  TextureManager.h
src/resourceNew/: MaterialLoader.cpp  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  TextureLoader.cpp  TextureLoader.h
src/resources/: Handle.h  HandleAllocator.h  ResourceCommon.h  ResourceManager.h  ResourceSystem.h
src/service/: IServiceHandle.h  ServiceHandle.h  ServiceLocator.h
src/struct/: ElementBuffer.h  VertexArray.h  VertexBuffer.h  vertex.h
src/utils/: CameraController.cpp  CameraController.h  DebugConsole.h  FileIO.h  Logger.h  StaticRegistry.h  StbiImage.h  UUID.h  debug_extensions.h  json_common.h  memoryUsage.h  structs.h  to_json.h  typemap.h
types/: Camera.lua  Debug.lua  Entity.lua  Gizmo.lua  Input.lua  NameComponent.lua  Rigidbody.lua  Scene.lua  TextComponent.lua  Time.lua  Transform.lua  Vec3.lua
(+131 files in other folders)
